# pdf-annotations

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci-build.yml  ci-release.yml
