[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.0.0"
commit = "true"
tag = "true"
tag_name = "v{new_version}"

[project]
name = "pdf-annotations"
license = { file = "LICENSE" }
authors = [
    { name = "Luca Foppiano", email = "lucanoro@duck.com" }
]
maintainers = [
    { name = "Luca Foppiano", email = "lucanoro@duck.com" }
]
description = "Viewer for the structure extracted by Grobid on PDF documents"
readme = "README.md"

dynamic = ['version']

[tool.setuptools_scm]

[project.urls]
Homepage = "https://pdf-annotations.streamlit.app"
Repository = "https://github.com/lfoppiano/pdf-annotations"
Changelog = "https://github.com/lfoppiano/pdf-annotations/blob/main/CHANGELOG.md"